--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,31 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
-/* add the code bellow */ 
+/* https://github.com/orgs/mantinedev/discussions/1672#discussioncomment-10777394 */
+
+@layer tw_base, mantine, tw_components, tw_utilities;
+
+/* import tailwind */
+@import "tailwindcss/base" layer(tw_base);
+@import "tailwindcss/components" layer(tw_components);
+@import "tailwindcss/utilities" layer(tw_utilities);
+
+/* import mantine */
+@import "@mantine/core/styles.layer.css";
+
+/* add the code bellow */
 @layer utilities {
-      /* Hide scrollbar for Chrome, Safari and Opera */
-      .no-scrollbar::-webkit-scrollbar {
-          display: none;
-      }
-     /* Hide scrollbar for IE, Edge and Firefox */
-      .no-scrollbar {
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
-    }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
-
-
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
 
 /* @layer base {
   :root {
